Feat: Window added

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,10 @@
   </head>
   <body>
     <noscript>Coool</noscript>
-    <div id="root"></div>
+    <div id="root">
+        <img src = "../src/resources/fedora.jpg" width="250px" alt="load hoja bra">
+
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
